--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>webpack</title>
-        <link rel="stylesheet" href="./style.css" charset="utf-8">
+        <link rel="stylesheet" href="./bundle.css" charset="utf-8">
     </head>
     <body>
         <div id="container"></div>
